<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support">Написать в техподдержку</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_mail">andreysuzi@yandex.ru</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
</resources>