<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLayout"
    android:paddingEnd="@dimen/side_padding_end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="40dp">

        <ImageView
            android:id="@+id/arrow_back"
            style="@style/ArrowBack"/>

        <TextView
            style="@style/Title"
            android:layout_marginStart="28dp"
            android:text="@string/settings"/>

    </LinearLayout>

    <FrameLayout
        style="@style/SettingsStringLayout">

        <TextView
            style="@style/SettingsString"
            android:text="@string/dark_theme"/>

        <Switch
            style="@style/SettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_button"
        style="@style/SettingsStringLayout">

        <TextView
            style="@style/SettingsString"
            android:text="@string/share" />

        <ImageView
            style="@style/SettingsButton"
            android:layout_width="@dimen/image_16"
            android:layout_height="@dimen/image_18"
            android:layout_marginEnd="2dp"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_button"
        style="@style/SettingsStringLayout">

        <TextView
            style="@style/SettingsString"
            android:text="@string/support" />


        <ImageView
            style="@style/SettingsButton"
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_18"
            android:src="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement_button"
        style="@style/SettingsStringLayout">

        <TextView
            style="@style/SettingsString"
            android:text="@string/agreement" />

        <ImageView
            style="@style/SettingsButton"
            android:layout_width="@dimen/image_8"
            android:layout_height="@dimen/image_14"
            android:layout_marginEnd="6dp"
            android:src="@drawable/arrow_forward" />

    </FrameLayout>

</LinearLayout>