<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/side_padding"
    android:paddingTop="@dimen/top_padding"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_radius"
        android:text="@string/search"
        android:textSize="@dimen/title"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        app:icon="@drawable/search"
        app:iconTint="@color/dark_grey"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"/>



    <Button
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_radius"
        android:text="@string/library"
        android:textSize="@dimen/title"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        app:icon="@drawable/library"
        app:iconTint="@color/dark_grey"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_radius"
        android:text="@string/settings"
        android:textSize="@dimen/title"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        app:icon="@drawable/settings"
        app:iconTint="@color/dark_grey"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"/>

</LinearLayout>